<resources>
    <string name="app_name">Gita day 3</string>
    <string name="dob">DOB</string>
    <string name="select">Select</string>
    <string name="day_of_birthday">Day of Birthday</string>
    <string name="tor">TOR</string>
    <string name="time_of_registration">Time Of Registration</string>
    <string name="name">name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="agree">Agree</string>
    <string name="save">Save</string>
    <string name="title_activity_next">NextActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="please_agree_to_the_terms_and_conditions">please agree to the terms and conditions</string>
    <string name="ok">ok</string>
    <string name="you_have_entered">you have entered</string>
    <string name="confirm">Confirm</string>
    <string name="about">about</string>
    <string name="exit">exit</string>
    <string name="qualification">Qualification</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="navigate">navigate</string>

    <string-array name="Qualification">
        <item>none</item>
        <item>1 years</item>
        <item>2 years</item>
        <item>2–5 years</item>
        <item>5–15 years</item>
        <item>15–30 years</item>
        <item>30 more</item>
    </string-array>

</resources>