<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    android:orientation="vertical"
    tools:context=".NextActivity">


    <TextView
        android:id="@+id/enterTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="90dp"
        android:text="@string/you_have_entered"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/birthdayTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:text="@string/day_of_birthday" />

    <TextView
        android:id="@+id/regDayTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:text="@string/time_of_registration" />

    <TextView
        android:id="@+id/nameSecondTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/numberSecondTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:text="@string/mobile_number" />

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:text="@string/confirm" />


</LinearLayout>